[package]
name = "debugbox"
version = "0.1.0"
authors = ["Oleg Scherbakov <scherbakov.oleg@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
capstone = "0.11"
serde = { version = "1.0", features = ["serde_derive"] }
zbus = "3.14"
zi = "0.3"
zi-term = "0.3"
